# getajob

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  env.template  pyproject.toml  test-plan.txt
.github/: BRANCH_PROTECTION.md  dependabot.yml
.github/workflows/: ci.yml
.hermes/loop/: bulletproof-charter.md  bulletproof-state.json  dead-end-ledger.md  loop-charter.md  loop-state.json  next-level-charter.md  next-level-state.json  prompt-item-01.txt  prompt-item-03.txt  prompt-item-04.txt  prompt-item-05.txt  prompt-item-06.txt  prompt-nl01.txt  prompt-nl02.txt  prompt-nl03.txt  prompt-nl04.txt  prompt-nl07.txt  prompt-nl56.txt  prompt-security.txt
.hermes/loop/prompts/: bp01-mypy.txt
agents/: __init__.py  base.py  context_agent.py  ingestion_agent.py  orchestrator_agent.py  tailoring_agent.py
approval_queue/: main.py  routes.py
approval_queue/static/: app.js  style.css
approval_queue/templates/: base.html  dashboard.html  login.html  review.html  settings.html
browser_engine/: __init__.py  _availability.py  ats_detector.py  form_filler.py  human_simulator.py  manual_submit.py  selectors.py  stealth_browser.py
browser_engine/ats_profiles/: __init__.py  generic.py  greenhouse.py  indeed.py  lever.py  linkedin.py  workday.py
config/: settings.yaml
config/prompts/: cover_letter.txt  outreach_message.txt  resume_tailoring.txt
core/: __init__.py  config.py  database.py  event_bus.py  exceptions.py  llm_client.py  models.py  pipeline.py  pipeline_adapters.py  schemas.py  security.py  sources.py  state_machine.py
docs/: architecture.md  deployment.md  security.md
getajob/: __init__.py  cli.py
getajob/cli/: __init__.py  __main__.py  _app.py  _helpers.py  commands.py  helpers.py  main.py  profile.py  vector.py
outreach_engine/: __init__.py  contact_finder.py  email_validator.py  message_generator.py
profile_engine/: __init__.py  experience_parser.py  profile_store.py  vector_store.py
scripts/: run.sh  setup.sh
tailoring_engine/: __init__.py  anti_ai_detector.py  cover_letter_generator.py  resume_generator.py  truth_validator.py
tests/: conftest.py  test_ingestion_agent.py  test_pipeline.py
tests/integration/: test_full_pipeline.py
tests/test_approval_queue/: __init__.py  test_routes.py
tests/test_core/: test_security.py
tests/test_outreach/: __init__.py  test_contact_finder.py  test_email_validator.py  test_message_generator.py
