[project]
name = "getajob"
version = "0.1.0"
description = "Agentic job application platform — searches boards, tailors resumes, generates cover letters, applies via browser automation, and performs recruiter outreach."
requires-python = ">=3.12"
authors = [
    { name = "Turin", email = "turin@getajob.dev" },
]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: AsyncIO",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    # Validation & settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    # Browser automation
    "browser-use>=0.1.0",
    "playwright>=1.48.0",
    # Vector store
    "chromadb>=0.5.0",
    # Caching & messaging
    "redis>=5.2.0",
    # HTTP client
    "httpx>=0.28.0",
    # Email validation (optional — graceful fallback if missing)
    "dnspython>=2.6.0",
    # Cryptography
    "cryptography>=43.0.0",
    # Logging
    "structlog>=24.4.0",
    # CLI
    "typer>=0.15.0",
    "rich>=13.9.0",
    "aiohttp>=3.14.1",
    "pypdf>=6.14.2",
]

[project.scripts]
getajob = "getajob.cli:app"

[project.urls]
Homepage = "https://github.com/iknowkungfubar/getajob"
Repository = "https://github.com/iknowkungfubar/getajob.git"
Documentation = "https://github.com/iknowkungfubar/getajob#readme"
Issues = "https://github.com/iknowkungfubar/getajob/issues"
Changelog = "https://github.com/iknowkungfubar/getajob/releases"

[tool.ruff]
# Target Python version
target-version = "py312"

# Default line length
line-length = 100

# Enable pycodestyle, Pyflakes, isort, and a curated set of plugins
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade (Python version warnings)
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "C4",  # flake8-comprehensions
    "RUF", # Ruff-specific rules
]

# Rules to explicitly ignore
lint.ignore = [
    "E501",   # line-too-long — handled by formatter
    "B008",   # function-call-in-default-arg — FastAPI patterns
    "UP006",  # non-pep585-annotation — keep typing imports
    "UP035",  # deprecated-import — keep typing imports
]

# Allow per-file ignores
lint.per-file-ignores = { "tests/*" = ["S101"] }

[tool.ruff.format]
# Use Black-compatible formatting
preview = true
line-ending = "lf"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true

# Disable strictness on test files and alembic migrations
exclude = [
    "tests/",
    "alembic/",
]

# Additional mypy settings
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
enable_error_code = [
    "redundant-self",
    "truthy-iterable",
    "unused-coroutine",
    "possibly-undefined",
]

[tool.bandit]
skips = ["B101", "B303", "B311", "B404", "B603", "B607"]
targets = ["core", "agents", "browser_engine", "profile_engine", "tailoring_engine", "outreach_engine", "approval_queue", "getajob"]

[tool.pytest.ini_options]
minversion = "8.3"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-q",
]

[tool.coverage.run]
source = ["core", "agents", "browser_engine", "profile_engine", "tailoring_engine", "outreach_engine", "approval_queue", "getajob"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

# Ensure setuptools understands the package
[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[tool.setuptools.packages.find]
include = [
    "core",
    "core.*",
    "agents",
    "agents.*",
    "browser_engine",
    "browser_engine.*",
    "profile_engine",
    "profile_engine.*",
    "tailoring_engine",
    "tailoring_engine.*",
    "outreach_engine",
    "outreach_engine.*",
    "approval_queue",
    "approval_queue.*",
    "getajob",
    "getajob.*",
]
