[project]
name = "getajob"
version = "0.1.0"
description = "Agentic job application platform — searches boards, tailors resumes, generates cover letters, applies via browser automation, and performs recruiter outreach."
requires-python = ">=3.12"
readme = "README.md"
classifiers = [ "Development Status :: 2 - Pre-Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3 :: Only", "Framework :: AsyncIO", "Topic :: Office/Business :: Financial :: Investment", "Typing :: Typed",]
dependencies = [ "fastapi>=0.115.0", "uvicorn[standard]>=0.32.0", "jinja2>=3.1.4", "python-multipart>=0.0.12", "aiofiles>=24.1.0", "sqlalchemy[asyncio]>=2.0.36", "asyncpg>=0.30.0", "alembic>=1.13.0", "pydantic>=2.10.0", "pydantic-settings>=2.6.0", "python-dotenv>=1.0.1", "browser-use>=0.1.0", "playwright>=1.48.0", "chromadb>=0.5.0", "redis>=5.2.0", "httpx>=0.28.0", "dnspython>=2.6.0", "cryptography>=43.0.0", "structlog>=24.4.0", "typer>=0.15.0", "rich>=13.9.0", "aiohttp>=3.14.1", "pypdf>=6.14.2",]
[[project.authors]]
name = "Turin"
email = "turin@getajob.dev"

[build-system]
requires = [ "setuptools>=75.0.0",]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [ "aiosqlite>=0.22.1", "pytest>=9.1.1", "pytest-asyncio>=1.4.0", "pytest-cov>=6.1.1", "pytest-mock>=3.15.1", "ruff>=0.7.0", "mypy>=1.13.0", "pre-commit>=4.0.0", "types-pyyaml>=6.0.12.20260518", "bandit>=1.8.3", "pip-audit>=2.9.0",]

[project.license]
text = "MIT"

[project.scripts]
getajob = "getajob.cli:app"

[project.urls]
Homepage = "https://github.com/iknowkungfubar/getajob"
Repository = "https://github.com/iknowkungfubar/getajob.git"
Documentation = "https://github.com/iknowkungfubar/getajob#readme"
Issues = "https://github.com/iknowkungfubar/getajob/issues"
Changelog = "https://github.com/iknowkungfubar/getajob/releases"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
exclude = [ "tests/", "alembic/", "browser_engine/",]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
enable_error_code = [ "redundant-self", "truthy-iterable", "unused-coroutine", "possibly-undefined",]

[tool.bandit]
skips = [ "B101", "B303", "B311", "B404", "B603", "B607",]
targets = [ "core", "agents", "browser_engine", "profile_engine", "tailoring_engine", "outreach_engine", "approval_queue", "getajob",]

[tool.pip-audit]
[[tool.pip-audit.ignore]]
id = "GHSA-f5x6-5q5v-3j4v"
reason = "getajob package is from source, not PyPI"

[tool.ruff.lint]
select = [ "E", "W", "F", "I", "N", "UP", "B", "SIM", "ARG", "C4", "RUF",]
ignore = [ "E501", "B008", "UP006", "UP035",]

[tool.ruff.format]
preview = true
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "8.3"
testpaths = [ "tests",]
python_files = [ "test_*.py",]
asyncio_mode = "auto"
addopts = [ "-ra", "--strict-markers", "--strict-config", "-q",]

[tool.coverage.run]
source = [ "core", "agents", "browser_engine", "profile_engine", "tailoring_engine", "outreach_engine", "approval_queue", "getajob",]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 30
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [ "S101", "ARG002",]
"core/pipeline_adapters.py" = [ "ARG002",]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.packages.find]
include = [ "core", "core.*", "agents", "agents.*", "browser_engine", "browser_engine.*", "profile_engine", "profile_engine.*", "tailoring_engine", "tailoring_engine.*", "outreach_engine", "outreach_engine.*", "approval_queue", "approval_queue.*", "getajob", "getajob.*",]
